--- a/package.json
+++ b/package.json
@@ -1,30 +1,34 @@
 {
-  "name": "picpulse_backend",
+  "name": "auth-node-mysql",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "src/index.js",
   "scripts": {
-    "start": "set NODE_ENV=dev& nodemon api.js",
-    "start:production": "set NODE_ENV=prod& nodemon api.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node src/index.js",
+    "start:dev": "nodemon",
+    "db:up": "node src/database/scripts/dbUp.js",
+    "db:down": "node src/database/scripts/dbDown.js",
+    "tables:up": "node src/database/scripts/tablesUp.js",
+    "db:init": "npm run db:up && npm run tables:up"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "express-jwt": "^8.4.1",
-    "jsonwebtoken": "^9.0.2",
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
+    "joi": "^17.6.0",
+    "jsonwebtoken": "^8.5.1",
+    "morgan": "^1.10.0",
     "mysql": "^2.18.1",
-    "mysql2": "^3.9.3",
-    "path": "^0.12.7",
-    "sequelize": "^6.37.1",
-    "winston": "^3.13.0"
+    "nodemailer": "^6.9.4",
+    "path": "^0.12.7"
   },
   "devDependencies": {
-    "nodemon": "^3.1.0"
+    "nodemon": "^2.0.22",
+    "winston": "^3.7.2"
   }
 }
