--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.1593.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "child_process": "^1.0.2",
